--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.7.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.14.0",
+    "html-to-image": "^1.11.11",
     "i18next": "^23.11.5",
     "i18next-fs-backend": "^2.3.2",
     "i18next-http-backend": "^2.6.2",
