--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landing",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@types/antd": "^1.0.0",
     "antd": "^5.21.3",
